crates/bingo-surface-print/src/snapshots/bingo_surface_print__stream_json__tests__max_turns.snap
---
source: crates/bingo-surface-print/src/stream_json.rs
expression: play_stream(&frames).out()
---
{"type":"system","subtype":"init","session_id":"ses_1","cwd":"/tmp","tools":["Read","Bash"],"model":"fake-1","permissionMode":"default","apiKeySource":"none"}
{"type":"result","subtype":"error_max_turns","is_error":true,"duration_ms":1500,"duration_api_ms":0,"num_turns":1,"errors":["the turn budget is exhausted"],"session_id":"ses_1","total_cost_usd":0.0,"usage":{"input_tokens":12,"output_tokens":34,"cache_read_input_tokens":56,"cache_creation_input_tokens":78}}
